pumpmaster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pumpmaster-service
spec:
  selector:
    app: pumpmaster-blue # I used blue as default.
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer

# During deployment, the pipeline will change this service's selector to "app: pumpmaster-green" when it's time to swap traffic.
