pumpmaster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pumpmaster-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: pumpmaster.informag.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pumpmaster-service
            port:
              number: 80
